[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PriceParcer"
version = "0.0.1"
description = "A demo application that shows how LLm technology can be used in price-data-flows can be extracted"
authors = [
  {name = "Leo Hanhart", email = "lhanhart1996@gmail.com"},
]
dependencies = [
  "dash",
  "uvicorn",
  "gunicorn",
  "pandas",
  "requests",
  "python-dotenv",
  "kombu",
  "docker",
  "pytest",
  "pytest-asyncio",
  "pytest-mock",
  "openai==1.57.0",
]

[options]
package_dir = "src"
